--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import './styles/vibe.css';
 
 @tailwind base;
 @tailwind components;
@@ -133,4 +134,3 @@
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
   }
 }
-</layer>
